--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "watch": "gulp watch",
+    "dev": "gulp"
   },
   "devDependencies": {
     "gulp": "^5.0.1",
